Set new rule for permalinks.

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ paginate_path: "/page:num/"
 inter_post_navigation: false
 highlightjs_theme: "monokai_sublime"
 
+# Permalinks settings
+permalink: /:title/
+
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
 jekyll-archives:
   enabled:
