Copyright and "Made in" added to footer.

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,8 @@ title: Coding Nights
 subtitle: "The (mis)adventures of a Python coder"
 email: gioia.ballin@codingnights.com
 name: Gioia Ballin
+location: Milan
+started: 2015
 description: >
   The (mis)adventures of a Python coder: human feelings and programming subjects
   reported with a unique frankness.
