--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,7 @@ social:
     username:
     url:
     desc: Follow me on Pinterest
-    share: true
+    share: false
 
   - name: SoundCloud
     icon: soundcloud
