--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 # External gems
 # See http://ixti.net/software/2013/01/28/using-jekyll-plugins-on-github-pages.html for making `jekyll archives` work.
 gems:
-  - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
   - jekyll-paginate
 
@@ -36,18 +35,8 @@ inter_post_navigation: false
 # Permalinks settings
 permalink: /:title/
 
-# Archive settings (see https://github.com/jekyll/jekyll-archives/)
-# jekyll-archives:
-#   enabled:
-#     - categories
-#     - tags
-#   layout: 'archive'
-#   permalinks:
-#     category: '/category/:name/'
-#     tag: '/tag/:name/'
-
 # Disqus comments
-# disqus_shortname: bencentra
+disqus_shortname: codingnights
 
 # Google analytics
 # ga_tracking_id: "UA-XXXX-1"
