--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@
 gems:
   - jekyll-sitemap
   - jekyll-paginate
+  - jekyll-archives
 
 exclude:
   - "/vendor/"
@@ -30,6 +31,16 @@ markdown: kramdown
 paginate: 5
 paginate_path: "/page:num/"
 inter_post_navigation: false
+
+# Archive settings (see https://github.com/jekyll/jekyll-archives/)
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+  layout: 'archive'
+  permalinks:
+    category: '/category/:name/'
+    tag: '/tag/:name/'
 
 # Permalinks settings
 permalink: /:title/
