--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ feedburner: "http://feeds.feedburner.com/CodingNights"
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 # baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://gioiab.github.io" # the base hostname & protocol for your site
+url: "http://codingnights.com" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 # logo: ""
 
