--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ feedburner: "http://feeds.feedburner.com/CodingNights"
 # baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://codingnights.com" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
-# logo: ""
+logo: "/assets/logo.png"
 
 # Build settings
 markdown: kramdown
