Google Analytics set up.

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ permalink: /:title/
 disqus_shortname: codingnights
 
 # Google analytics
-# ga_tracking_id: "UA-XXXX-1"
+ga_tracking_id: "UA-71620022-1"
 
 # Category descriptions (for archive pages)
 descriptions:
